修正圖片路徑

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ol>
             <div class="newrelease">
                 <div class="leasetitle">New Release</div>
-                <img src="../mp3/img/LEMON.jpg" style="width: 160px;height: 160px; background-size: contain;"> <span class="leasecontent">But I must explain to You (Deluxe)</span>
+                <img src="img/LEMON.jpg" style="width: 160px;height: 160px; background-size: contain;"> <span class="leasecontent">But I must explain to You (Deluxe)</span>
             </div>
         </div>
         <div id="play">Y</div>
